<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".TourDetailsActivity">


    <TextView
        android:id="@+id/titleTourDetails"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_gravity="fill_vertical|end"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/New_York"
        android:textColor="#000"
        android:textSize="18sp"
        app:fontFamily="sans-serif" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/overview"
        android:textColor="#000"
        android:textSize="18sp"
        app:fontFamily="@font/roboto_light" />

    <TextView
        android:id="@+id/descTourDetails"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:gravity="center"
        android:text="@string/New_York"
        android:textColor="@color/colorTextsub"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_light" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:text="@string/btnDate"
        android:textColor="@color/btntxtColor" />


    <TextView
        android:id="@+id/noOfPeople"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/noOfPeople"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/text_subhead"
        app:fontFamily="sans-serif-light" />


    <LinearLayout

        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/background_white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:padding="0dp"
            android:text="@string/decrement"
            android:textColor="@color/Red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/display"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/greyborder"
            android:focusable="false"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:text="@string/defaultVal"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/increment"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:padding="0dp"
            android:text="@string/increment"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBookTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:text="@string/btnBookTour"
        android:textColor="@color/btntxtColor"
        android:textSize="15sp" />


</LinearLayout>


