<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="@dimen/margin15"
        android:gravity="center"
        android:text="@string/Selectcity"
        android:textColor="@color/colorTextsub"
        android:textSize="36sp"
        android:textStyle="normal"
        app:fontFamily="@font/roboto_light" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_margin="@dimen/margin15"
        android:entries="@array/cities" />

    <Button
        android:id="@+id/btnFindTours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin15"
        android:background="@drawable/btn_rounded"
        android:text="@string/btnFindTours"
        android:textColor="@color/btntxtColor"
        android:textSize="15sp" />


    <Button
        android:id="@+id/knowMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin15"
        android:background="@drawable/btn_rounded"
        android:text="@string/knowMore"
        android:textColor="@color/btntxtColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/webCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/confirmationMargin"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:fontFamily="sans-serif" />

</LinearLayout>
